--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,20 @@
     margin: 0;
     padding: 0;
 }
-
+.header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .bar {
     background: red;
     display: flex;
     justify-content: space-between;
+}
+
+.counter-area{
+    display: flex;
+    justify-content: space-evenly;
+    align-self: center;
+    
 }
